syntax = "proto3";
package abi;

message EchoRequest { string message = 1; }

message EchoResponse { string message = 1; }

service EchoService { rpc echo(EchoRequest) returns (EchoResponse); }
